syntax = "proto3";

package Protocol;

import "client.proto";
import "server.proto";
import "struct.proto";

// 방 입장 요청 패킷
message C2L_EnterRoom 
{
  C2S_Metadata meta = 1;
  uint32 roomId = 2;       // 입장하려는 Room ID
}

// 방 입장 응답 패킷(내가 입장)
message L2C_EnterRoomMe 
{
  S2C_Metadata meta = 1;    // 공통 응답 메타 데이터
  repeated UserInfo users = 2;  // 방에 있는 기존 유저 정보
  RoomInfo roomInfo =3; //방 정보(방ID, 방 이름, 현재 인원 수, 최대 인원 수)
}

//방 입장 응답 패킷(남이 입장)
message L2C_EnterRoomOther 
{
  S2C_Metadata meta = 1;    // 공통 응답 메타 데이터
  UserInfo newUser = 2;       // 신규 유저 정보
}

message C2L_LeaveRoom
{
    C2S_Metadata meta = 1;
    uint32 roomId = 2;
    string userId = 3;
}

message L2C_LeaveRoomMe
{
    S2C_Metadata meta = 1;    // 공통 응답 메타 데이터
}

message L2C_LeaveRoomOther
{
    S2C_Metadata meta = 1;    // 공통 응답 메타 데이터
    string userId = 2;
}

message C2L_RoomList
{
  C2S_Metadata meta = 1;
}

message L2C_RoomList
{
  S2C_Metadata meta = 1; //공통 응답 메타 데이터
  repeated RoomInfo rooms = 2; //방 목록
}

message C2L_GameStart
{
    C2S_Metadata meta = 1;
    uint32 roomId = 2;       // 입장하려는 Room ID
}

message L2C_GameStart
{
    S2C_Metadata meta = 1; //공통 응답 메타 데이터
    string host = 2; //ex: localhost
    int32 port = 3; //포트번호
    uint32 roomId = 4;
}

message L2B_CreateRoom
{
  uint32 roomId = 1;
  uint32 maxPlayers = 2;
}

message B2L_CreateRoom
{
  bool isCreated = 1;
  uint32 roomId = 2;
}